[gd_scene load_steps=18 format=3 uid="uid://npe0v4dkktk8"]

[ext_resource type="Script" path="res://Main/Player/Camera Rig/Camera/fps_camera_rig.gd" id="1_b7u8s"]
[ext_resource type="Resource" uid="uid://dg0v5u41ae3da" path="res://Weapons/test_pistol/pistol_resource.tres" id="2_pc6ep"]
[ext_resource type="Texture2D" uid="uid://cgyxoiautuek8" path="res://Main/Player/Camera Rig/Camera/fps_camera_noise_map.tres" id="3_sargf"]
[ext_resource type="PackedScene" uid="uid://dfl1ltlvrb2n" path="res://Art/2D/Bullet Hole/bullet_decal.tscn" id="4_bonsb"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Camera/camera_recoil.gd" id="5_3rmha"]
[ext_resource type="ArrayMesh" uid="uid://dqqgcf0s4ywe5" path="res://Weapons/test_pistol/pistol_mesh.tres" id="6_8ijuv"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Weapon Scripts/weapon_sounds.gd" id="6_37s8u"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Camera/weapon_reload.gd" id="6_b4iga"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Weapon Scripts/weapon_ray.gd" id="7_bdphe"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Weapon Scripts/weapon_base_script.gd" id="8_cpc7a"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Weapon Scripts/weapon_recoil.gd" id="9_6saay"]
[ext_resource type="Script" path="res://Main/Player/Camera Rig/Weapon Scripts/muzzle_flash.gd" id="10_nt46d"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8af0u"]
angle_min = -181.5
angle_max = 16.8
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.05
initial_velocity_max = 0.1
gravity = Vector3(0, 0, 0)

[sub_resource type="Gradient" id="Gradient_wiooq"]
offsets = PackedFloat32Array(0, 0.711111, 1)
colors = PackedColorArray(1, 0.328125, 0, 1, 0.328889, 0.328889, 0.328889, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jlk8j"]
gradient = SubResource("Gradient_wiooq")
fill = 2
fill_from = Vector2(0.508547, 0.504274)
fill_to = Vector2(0.679487, 0.145299)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hymkb"]
transparency = 1
blend_mode = 1
albedo_texture = SubResource("GradientTexture2D_jlk8j")
roughness = 0.0
emission_enabled = true
emission_energy_multiplier = 16.0
emission_texture = SubResource("GradientTexture2D_jlk8j")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_tobhl"]
material = SubResource("StandardMaterial3D_hymkb")
size = Vector2(0.05, 0.05)

[node name="Camera Rig" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.88431, -1.34833)
script = ExtResource("1_b7u8s")
WEAPON_TYPE = ExtResource("2_pc6ep")
sway_noise = ExtResource("3_sargf")
bullet_hole = ExtResource("4_bonsb")

[node name="CameraRecoil" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_3rmha")

[node name="Camera3D" type="Camera3D" parent="CameraRecoil"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.119046, -4.76837e-07, 0)

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraRecoil/Camera3D"]
update_mode = 1

[node name="WeaponRig" type="Node3D" parent="CameraRecoil/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.720176, -0.391942, -0.736076)

[node name="WeaponBase" type="Node3D" parent="CameraRecoil/Camera3D/WeaponRig"]
unique_name_in_owner = true
script = ExtResource("8_cpc7a")

[node name="WeaponReload" type="Node" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase"]
unique_name_in_owner = true
script = ExtResource("6_b4iga")

[node name="WeaponSounds" type="Node" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase"]
unique_name_in_owner = true
script = ExtResource("6_37s8u")

[node name="WeaponRay" type="Node" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase"]
unique_name_in_owner = true
script = ExtResource("7_bdphe")

[node name="WeaponRecoil" type="Node3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase"]
unique_name_in_owner = true
script = ExtResource("9_6saay")

[node name="MuzzleFlash" type="Node3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil"]
unique_name_in_owner = true
script = ExtResource("10_nt46d")

[node name="GPUParticles3D" type="GPUParticles3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil/MuzzleFlash"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0667825, -0.350221)
emitting = false
lifetime = 0.03
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_8af0u")
draw_pass_1 = SubResource("QuadMesh_tobhl")

[node name="OmniLight3D" type="OmniLight3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil/MuzzleFlash"]
unique_name_in_owner = true
visible = false
light_color = Color(1, 0.466583, 0.113281, 1)
light_energy = 3.0
omni_range = 10.0

[node name="WeaponShadow" type="MeshInstance3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil"]
unique_name_in_owner = true
visible = false
skeleton = NodePath("../..")

[node name="WeaponMesh" type="MeshInstance3D" parent="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil"]
unique_name_in_owner = true
mesh = ExtResource("6_8ijuv")
skeleton = NodePath("../..")

[connection signal="reload_finished" from="CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponReload" to="." method="_on_weapon_reload_reload_finished"]
